--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
     <version>6.1.1</version>
 </dependency>
 
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.3</version>
+</dependency>
 
 	</dependencies>
 
